Upgrade to Java 17 and gradle 7.4.2. (#188)
* Upgrade to Java 17 and gradle 7.4.2; use new doclet APIs; remove mock unit tests, fix custom tags.